--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .header {
     height: 100vh;
     width: 100%;
-    background-color: #fff;
+    background-color: #F9F9F9;
 }
 
 .header .bgimg img {
@@ -132,4 +132,16 @@
     align-items: center;
     text-transform: uppercase;
     color: #FFFFFF
+}
+
+.statistics {
+    position: absolute;
+    width: 1140px;
+    height: 130px;
+    left: 163px;
+    top: 560px;
+
+    /* background: #FFFFFF; */
+    box-shadow: 0px 10px 19px rgba(24, 24, 24, 0.04);
+    border-radius: 12px;
 }
