--- a/style.css
+++ b/style.css
@@ -314,24 +314,7 @@
     background: #FAFAFA;
     border-radius: 10px;
 }
-
-.card1img {
-    width: 75px;
-    height: 75px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
-
-.card2img {
-    display: block;
-    width: 75px;
-    height: 75px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.card3img {
+.cardimg {
     display: block;
     width: 75px;
     height: 75px;
