--- a/style.css
+++ b/style.css
@@ -288,10 +288,11 @@
 .cards {
     display: flex;
     padding: 0;
-    width: 100vw;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     justify-content: center;
+    gap: 45px;
 }
 
 .card1 {
@@ -306,6 +307,7 @@
     height: 375px;
     background: #Ffffff;
     border-radius: 10px;
+    box-shadow: 0px 8px 41px rgba(0, 0, 0, 0.06);
 }
 
 .card3 {
@@ -382,4 +384,5 @@
     color: #212121;
     opacity: 0.8;
 }
+
 /*Services Part Ends Here*/
