--- a/style.css
+++ b/style.css
@@ -386,3 +386,181 @@
 }
 
 /*Services Part Ends Here*/
+/*Shipping calender*/
+.shipmentpartend{
+    display: block;
+}
+.calender {
+    width: 745px;
+    height: 523px;
+    background: #FFFFFF;
+    box-shadow: 0px 5px 21px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    position: absolute;
+    left: 606px;
+}
+
+.month {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 20px;
+    /* identical to box height, or 71% */
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    color: #212121;
+    position: absolute;
+    left: 91px;
+}
+
+.calendertable {
+    border-spacing: 32px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.weekday {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 16px;
+    /* identical to box height, or 89% */
+
+    text-align: center;
+    text-transform: uppercase;
+    width: 55px;
+    height: 55px;
+    color: #212121;
+
+    mix-blend-mode: normal;
+    opacity: 0.78;
+}
+
+.monthdate {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 16px;
+    /* identical to box height, or 80% */
+
+    text-align: center;
+    text-transform: uppercase;
+    width: 55px;
+    height: 55px;
+    color: #212121;
+}
+
+.prevmonth {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 16px;
+    /* identical to box height, or 80% */
+
+    text-align: center;
+
+    color: #212121;
+
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    width: 55px;
+    height: 55px;
+}
+
+.shipmentdate {
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 16px;
+    /* identical to box height, or 80% */
+    border-radius: 50%;
+    text-align: center;
+    text-transform: uppercase;
+    width: 55px;
+    height: 55px;
+    color: #FFFFFF;
+    background: red;
+}
+
+.selecteddiv {
+    width: 350px;
+    height: 60px;
+    background: rgba(254, 0, 0, 0.317);
+    border: 1px solid #E6E6E6;
+    border-radius: 8px;
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height, or 125% */
+    align-items: center;
+    text-align: center;
+    display: flex;
+    text-transform: uppercase;
+    color: #FE0000;
+    justify-content: center;
+}
+
+.remainingdiv {
+    width: 350px;
+    height: 60px;
+    border: 1px solid #E6E6E6;
+    border-radius: 8px;
+    justify-content: center;
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    /* identical to box height, or 125% */
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    color: #212121;
+    opacity: 0.7;
+}
+.shipmentcolumn{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 180px;
+    gap: 10px;
+}
+.fullcalender{
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+}
+.sliderrectangle{
+position: absolute;
+width: 5px;
+height: 72px;
+left: 535px;
+background: #E4E4E4;
+border-radius: 30px;
+}
+.leftbutton{
+    position: absolute;
+    left: 570px;
+    width: 25px;
+    height: 25px;
+    top: 15px;
+}
+.rightbutton{
+    position: absolute;
+    left: 620px;
+    width: 25px;
+    height: 25px;
+    top: 15px;
+}
+.shipmentcalenderfull{
+    display: block;
+}
+/*Shipping calender ends*/
